Matriculas e Certificado implementacao

--- a/src/EducaMBAXpert.Usuario.Domain/EducaMBAXpert.Usuarios.Domain.csproj
+++ b/src/EducaMBAXpert.Usuario.Domain/EducaMBAXpert.Usuarios.Domain.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\EducaMBAXpert.Contracts\EducaMBAXpert.Contracts.csproj" />
     <ProjectReference Include="..\EducaMBAXpert.Core\EducaMBAXpert.Core.csproj" />
   </ItemGroup>
 
