--- a/src/EducaMBAXpert.Contracts/EducaMBAXpert.Contracts.csproj
+++ b/src/EducaMBAXpert.Contracts/EducaMBAXpert.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EducaMBAXpert.Core\EducaMBAXpert.Core.csproj" />
+  </ItemGroup>
+
 </Project>
