--- a/src/EducaMBAXpert.Aluno.Data/EducaMBAXpert.Alunos.Data.csproj
+++ b/src/EducaMBAXpert.Aluno.Data/EducaMBAXpert.Alunos.Data.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\EducaMBAXpert.Aluno.Domain\EducaMBAXpert.Alunos.Domain.csproj" />
     <ProjectReference Include="..\EducaMBAXpert.Core\EducaMBAXpert.Core.csproj" />
-    <ProjectReference Include="..\EducaMBAXpert.Usuario.Domain\EducaMBAXpert.Alunos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
