Refatoracoes de BoundContext geracao de Certificado para BoundContext de Aluno

--- a/src/EducaMBAXpert.Aluno.Application/EducaMBAXpert.Alunos.Application.csproj
+++ b/src/EducaMBAXpert.Aluno.Application/EducaMBAXpert.Alunos.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="automapper" Version="14.0.0" />
+    <PackageReference Include="QuestPDF" Version="2025.4.2" />
   </ItemGroup>
 
   <ItemGroup>
