--- a/src/EducaMBAXpert.CatalagoCursos.Domain/EducaMBAXpert.CatalagoCursos.Domain.csproj
+++ b/src/EducaMBAXpert.CatalagoCursos.Domain/EducaMBAXpert.CatalagoCursos.Domain.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Query\**" />
+    <EmbeddedResource Remove="Query\**" />
+    <None Remove="Query\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="mediatr" Version="12.5.0" />
   </ItemGroup>
 
